refactor: final impl